syntaxique.output
Grammar

    0 $accept: programme $end

    1 programme: ε
    2          | programme ligne

    3 ligne: expression '\n'
    4      | '\n'
    5      | error '\n'

    6 expression: expression PLUS expression
    7           | expression MOINS expression
    8           | expression FOIS expression
    9           | expression DIVISE expression
   10           | MOINS expression
   11           | PAREN_G expression PAREN_D
   12           | fonction
   13           | NOMBRE

   14 fonction: SOMME PAREN_G liste_args PAREN_D
   15         | PRODUIT PAREN_G liste_args PAREN_D
   16         | MOYENNE PAREN_G liste_args PAREN_D
   17         | VARIANCE PAREN_G liste_args PAREN_D
   18         | ECART_TYPE PAREN_G liste_args PAREN_D

   19 liste_args: expression
   20           | liste_args VIRGULE expression


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 3 4 5
    error (256) 5
    NOMBRE <nombre> (258) 13
    PLUS (259) 6
    MOINS (260) 7 10
    FOIS (261) 8
    DIVISE (262) 9
    PAREN_G (263) 11 14 15 16 17 18
    PAREN_D (264) 11 14 15 16 17 18
    VIRGULE (265) 20
    SOMME (266) 14
    PRODUIT (267) 15
    MOYENNE (268) 16
    VARIANCE (269) 17
    ECART_TYPE (270) 18
    UMINUS (271)


Nonterminals, with rules where they appear

    $accept (18)
        on left: 0
    programme (19)
        on left: 1 2
        on right: 0 2
    ligne (20)
        on left: 3 4 5
        on right: 2
    expression <nombre> (21)
        on left: 6 7 8 9 10 11 12 13
        on right: 3 6 7 8 9 10 11 19 20
    fonction <nombre> (22)
        on left: 14 15 16 17 18
        on right: 12
    liste_args <liste> (23)
        on left: 19 20
        on right: 14 15 16 17 18 20


State 0

    0 $accept: • programme $end

    $default  reduce using rule 1 (programme)

    programme  go to state 1


State 1

    0 $accept: programme • $end
    2 programme: programme • ligne

    $end        shift, and go to state 2
    error       shift, and go to state 3
    NOMBRE      shift, and go to state 4
    MOINS       shift, and go to state 5
    PAREN_G     shift, and go to state 6
    SOMME       shift, and go to state 7
    PRODUIT     shift, and go to state 8
    MOYENNE     shift, and go to state 9
    VARIANCE    shift, and go to state 10
    ECART_TYPE  shift, and go to state 11
    '\n'        shift, and go to state 12

    ligne       go to state 13
    expression  go to state 14
    fonction    go to state 15


State 2

    0 $accept: programme $end •

    $default  accept


State 3

    5 ligne: error • '\n'

    '\n'  shift, and go to state 16


State 4

   13 expression: NOMBRE •

    $default  reduce using rule 13 (expression)


State 5

   10 expression: MOINS • expression

    NOMBRE      shift, and go to state 4
    MOINS       shift, and go to state 5
    PAREN_G     shift, and go to state 6
    SOMME       shift, and go to state 7
    PRODUIT     shift, and go to state 8
    MOYENNE     shift, and go to state 9
    VARIANCE    shift, and go to state 10
    ECART_TYPE  shift, and go to state 11

    expression  go to state 17
    fonction    go to state 15


State 6

   11 expression: PAREN_G • expression PAREN_D

    NOMBRE      shift, and go to state 4
    MOINS       shift, and go to state 5
    PAREN_G     shift, and go to state 6
    SOMME       shift, and go to state 7
    PRODUIT     shift, and go to state 8
    MOYENNE     shift, and go to state 9
    VARIANCE    shift, and go to state 10
    ECART_TYPE  shift, and go to state 11

    expression  go to state 18
    fonction    go to state 15


State 7

   14 fonction: SOMME • PAREN_G liste_args PAREN_D

    PAREN_G  shift, and go to state 19


State 8

   15 fonction: PRODUIT • PAREN_G liste_args PAREN_D

    PAREN_G  shift, and go to state 20


State 9

   16 fonction: MOYENNE • PAREN_G liste_args PAREN_D

    PAREN_G  shift, and go to state 21


State 10

   17 fonction: VARIANCE • PAREN_G liste_args PAREN_D

    PAREN_G  shift, and go to state 22


State 11

   18 fonction: ECART_TYPE • PAREN_G liste_args PAREN_D

    PAREN_G  shift, and go to state 23


State 12

    4 ligne: '\n' •

    $default  reduce using rule 4 (ligne)


State 13

    2 programme: programme ligne •

    $default  reduce using rule 2 (programme)


State 14

    3 ligne: expression • '\n'
    6 expression: expression • PLUS expression
    7           | expression • MOINS expression
    8           | expression • FOIS expression
    9           | expression • DIVISE expression

    PLUS    shift, and go to state 24
    MOINS   shift, and go to state 25
    FOIS    shift, and go to state 26
    DIVISE  shift, and go to state 27
    '\n'    shift, and go to state 28


State 15

   12 expression: fonction •

    $default  reduce using rule 12 (expression)


State 16

    5 ligne: error '\n' •

    $default  reduce using rule 5 (ligne)


State 17

    6 expression: expression • PLUS expression
    7           | expression • MOINS expression
    8           | expression • FOIS expression
    9           | expression • DIVISE expression
   10           | MOINS expression •

    $default  reduce using rule 10 (expression)


State 18

    6 expression: expression • PLUS expression
    7           | expression • MOINS expression
    8           | expression • FOIS expression
    9           | expression • DIVISE expression
   11           | PAREN_G expression • PAREN_D

    PLUS     shift, and go to state 24
    MOINS    shift, and go to state 25
    FOIS     shift, and go to state 26
    DIVISE   shift, and go to state 27
    PAREN_D  shift, and go to state 29


State 19

   14 fonction: SOMME PAREN_G • liste_args PAREN_D

    NOMBRE      shift, and go to state 4
    MOINS       shift, and go to state 5
    PAREN_G     shift, and go to state 6
    SOMME       shift, and go to state 7
    PRODUIT     shift, and go to state 8
    MOYENNE     shift, and go to state 9
    VARIANCE    shift, and go to state 10
    ECART_TYPE  shift, and go to state 11

    expression  go to state 30
    fonction    go to state 15
    liste_args  go to state 31


State 20

   15 fonction: PRODUIT PAREN_G • liste_args PAREN_D

    NOMBRE      shift, and go to state 4
    MOINS       shift, and go to state 5
    PAREN_G     shift, and go to state 6
    SOMME       shift, and go to state 7
    PRODUIT     shift, and go to state 8
    MOYENNE     shift, and go to state 9
    VARIANCE    shift, and go to state 10
    ECART_TYPE  shift, and go to state 11

    expression  go to state 30
    fonction    go to state 15
    liste_args  go to state 32


State 21

   16 fonction: MOYENNE PAREN_G • liste_args PAREN_D

    NOMBRE      shift, and go to state 4
    MOINS       shift, and go to state 5
    PAREN_G     shift, and go to state 6
    SOMME       shift, and go to state 7
    PRODUIT     shift, and go to state 8
    MOYENNE     shift, and go to state 9
    VARIANCE    shift, and go to state 10
    ECART_TYPE  shift, and go to state 11

    expression  go to state 30
    fonction    go to state 15
    liste_args  go to state 33


State 22

   17 fonction: VARIANCE PAREN_G • liste_args PAREN_D

    NOMBRE      shift, and go to state 4
    MOINS       shift, and go to state 5
    PAREN_G     shift, and go to state 6
    SOMME       shift, and go to state 7
    PRODUIT     shift, and go to state 8
    MOYENNE     shift, and go to state 9
    VARIANCE    shift, and go to state 10
    ECART_TYPE  shift, and go to state 11

    expression  go to state 30
    fonction    go to state 15
    liste_args  go to state 34


State 23

   18 fonction: ECART_TYPE PAREN_G • liste_args PAREN_D

    NOMBRE      shift, and go to state 4
    MOINS       shift, and go to state 5
    PAREN_G     shift, and go to state 6
    SOMME       shift, and go to state 7
    PRODUIT     shift, and go to state 8
    MOYENNE     shift, and go to state 9
    VARIANCE    shift, and go to state 10
    ECART_TYPE  shift, and go to state 11

    expression  go to state 30
    fonction    go to state 15
    liste_args  go to state 35


State 24

    6 expression: expression PLUS • expression

    NOMBRE      shift, and go to state 4
    MOINS       shift, and go to state 5
    PAREN_G     shift, and go to state 6
    SOMME       shift, and go to state 7
    PRODUIT     shift, and go to state 8
    MOYENNE     shift, and go to state 9
    VARIANCE    shift, and go to state 10
    ECART_TYPE  shift, and go to state 11

    expression  go to state 36
    fonction    go to state 15


State 25

    7 expression: expression MOINS • expression

    NOMBRE      shift, and go to state 4
    MOINS       shift, and go to state 5
    PAREN_G     shift, and go to state 6
    SOMME       shift, and go to state 7
    PRODUIT     shift, and go to state 8
    MOYENNE     shift, and go to state 9
    VARIANCE    shift, and go to state 10
    ECART_TYPE  shift, and go to state 11

    expression  go to state 37
    fonction    go to state 15


State 26

    8 expression: expression FOIS • expression

    NOMBRE      shift, and go to state 4
    MOINS       shift, and go to state 5
    PAREN_G     shift, and go to state 6
    SOMME       shift, and go to state 7
    PRODUIT     shift, and go to state 8
    MOYENNE     shift, and go to state 9
    VARIANCE    shift, and go to state 10
    ECART_TYPE  shift, and go to state 11

    expression  go to state 38
    fonction    go to state 15


State 27

    9 expression: expression DIVISE • expression

    NOMBRE      shift, and go to state 4
    MOINS       shift, and go to state 5
    PAREN_G     shift, and go to state 6
    SOMME       shift, and go to state 7
    PRODUIT     shift, and go to state 8
    MOYENNE     shift, and go to state 9
    VARIANCE    shift, and go to state 10
    ECART_TYPE  shift, and go to state 11

    expression  go to state 39
    fonction    go to state 15


State 28

    3 ligne: expression '\n' •

    $default  reduce using rule 3 (ligne)


State 29

   11 expression: PAREN_G expression PAREN_D •

    $default  reduce using rule 11 (expression)


State 30

    6 expression: expression • PLUS expression
    7           | expression • MOINS expression
    8           | expression • FOIS expression
    9           | expression • DIVISE expression
   19 liste_args: expression •

    PLUS    shift, and go to state 24
    MOINS   shift, and go to state 25
    FOIS    shift, and go to state 26
    DIVISE  shift, and go to state 27

    $default  reduce using rule 19 (liste_args)


State 31

   14 fonction: SOMME PAREN_G liste_args • PAREN_D
   20 liste_args: liste_args • VIRGULE expression

    PAREN_D  shift, and go to state 40
    VIRGULE  shift, and go to state 41


State 32

   15 fonction: PRODUIT PAREN_G liste_args • PAREN_D
   20 liste_args: liste_args • VIRGULE expression

    PAREN_D  shift, and go to state 42
    VIRGULE  shift, and go to state 41


State 33

   16 fonction: MOYENNE PAREN_G liste_args • PAREN_D
   20 liste_args: liste_args • VIRGULE expression

    PAREN_D  shift, and go to state 43
    VIRGULE  shift, and go to state 41


State 34

   17 fonction: VARIANCE PAREN_G liste_args • PAREN_D
   20 liste_args: liste_args • VIRGULE expression

    PAREN_D  shift, and go to state 44
    VIRGULE  shift, and go to state 41


State 35

   18 fonction: ECART_TYPE PAREN_G liste_args • PAREN_D
   20 liste_args: liste_args • VIRGULE expression

    PAREN_D  shift, and go to state 45
    VIRGULE  shift, and go to state 41


State 36

    6 expression: expression • PLUS expression
    6           | expression PLUS expression •
    7           | expression • MOINS expression
    8           | expression • FOIS expression
    9           | expression • DIVISE expression

    FOIS    shift, and go to state 26
    DIVISE  shift, and go to state 27

    $default  reduce using rule 6 (expression)


State 37

    6 expression: expression • PLUS expression
    7           | expression • MOINS expression
    7           | expression MOINS expression •
    8           | expression • FOIS expression
    9           | expression • DIVISE expression

    FOIS    shift, and go to state 26
    DIVISE  shift, and go to state 27

    $default  reduce using rule 7 (expression)


State 38

    6 expression: expression • PLUS expression
    7           | expression • MOINS expression
    8           | expression • FOIS expression
    8           | expression FOIS expression •
    9           | expression • DIVISE expression

    $default  reduce using rule 8 (expression)


State 39

    6 expression: expression • PLUS expression
    7           | expression • MOINS expression
    8           | expression • FOIS expression
    9           | expression • DIVISE expression
    9           | expression DIVISE expression •

    $default  reduce using rule 9 (expression)


State 40

   14 fonction: SOMME PAREN_G liste_args PAREN_D •

    $default  reduce using rule 14 (fonction)


State 41

   20 liste_args: liste_args VIRGULE • expression

    NOMBRE      shift, and go to state 4
    MOINS       shift, and go to state 5
    PAREN_G     shift, and go to state 6
    SOMME       shift, and go to state 7
    PRODUIT     shift, and go to state 8
    MOYENNE     shift, and go to state 9
    VARIANCE    shift, and go to state 10
    ECART_TYPE  shift, and go to state 11

    expression  go to state 46
    fonction    go to state 15


State 42

   15 fonction: PRODUIT PAREN_G liste_args PAREN_D •

    $default  reduce using rule 15 (fonction)


State 43

   16 fonction: MOYENNE PAREN_G liste_args PAREN_D •

    $default  reduce using rule 16 (fonction)


State 44

   17 fonction: VARIANCE PAREN_G liste_args PAREN_D •

    $default  reduce using rule 17 (fonction)


State 45

   18 fonction: ECART_TYPE PAREN_G liste_args PAREN_D •

    $default  reduce using rule 18 (fonction)


State 46

    6 expression: expression • PLUS expression
    7           | expression • MOINS expression
    8           | expression • FOIS expression
    9           | expression • DIVISE expression
   20 liste_args: liste_args VIRGULE expression •

    PLUS    shift, and go to state 24
    MOINS   shift, and go to state 25
    FOIS    shift, and go to state 26
    DIVISE  shift, and go to state 27

    $default  reduce using rule 20 (liste_args)
